2009-01-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkPrintOperation.t
	* xs/GtkPrintOperation.xs: Wrap new API.  Patch by Emmanuel
	Rodriguez.

2009-01-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Makefile.PL: Use Glib::MakeHelper to create a
	'precompiled-headers' target that precompiles gtk2perl.h.  This
	speeds up the compilation of Gtk2 by 36% on my machine.

2009-01-13  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* AUTHORS
	* t/GtkStatusIcon.t
	* xs/GtkStatusIcon.xs: Wrap new GtkStatusIcon API.  Patch by
	Chris Sincock.

2009-01-13  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkIMContext.t
	* xs/GtkIMMulticontext.xs: Wrap
	gtk_im_multicontext_get_context_id.  Patch by Emmanuel Rodriguez.

2009-01-13  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkImageMenuItem.t
	* xs/GtkImageMenuItem.xs: Wrap new GtkImageMenuItem API.  Patch by
	Emmanuel Rodriguez.

2009-01-13  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkCellView.t
	* xs/GtkCellView.xs: Allow undef for the model in
	Gtk2::CellView::set_model.

2009-01-13  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkCellView.t
	* xs/GtkCellView.xs: Wrap gtk_cell_view_get_model.  Patch by
	Emmanuel Rodriguez.

2009-01-13  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* AUTHORS
	* MANIFEST
	* maps-2.16 (added)
	* t/GtkEntry.t
	* xs/GtkEntry.xs: Wrap the new GtkEntry API.  Patch by
	Emmanuel Rodriguez.

2009-01-13  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Gtk2.pm: In the Gtk2::Pango compatibility code, avoid warnings
	about names that are used only once by checking for definedness
	before creating aliases.

2009-01-01  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* xs/Gtk2.xs
	* xs/GtkWindow.xs: Use Gtk2::EVENT_STOP and EVENT_PROPAGATE in the
	synopsis for Gtk2::Window and in the docs for
	Gtk2::key_snooper_install.  Patch by Kevin Ryde.

2008-12-30  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* xs/GtkTreeModel.xs: Document the signature of the callback used